Adicionado mudanças no layout

--- a/AspNetCore.MVC.EFC/Views/Home/Index.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Home/Index.cshtml
@@ -2,7 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron">
+    <h1>Faculdade de Tecnologia</h1>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Bem-vindo à Faculdade de Tecnologia</h2>
+        <p>
+            "Faculdade de Tecnologia" é um exemplo de projeto que
+            demonstra como usar o EntityFramework em um Aplicativo
+            de Web Asp.Net Core MVC.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <h2>Construa do zero</h2>
+        <p>Você pode saber mais sobre o projeto acessando o repositório no Github.</p>
+        <p><a class="btn btn-default" href="https://github.com/paulamora-is/Poc-EntityFrameworkCore">Acessar repositório &raquo;</a></p>
+    </div>
 </div>
