Adicionado  scaffolding  StudentsController

--- a/AspNetCore.MVC.EFC/Views/Shared/_Layout.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Estudantes" asp-action="Index">Estudantes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Estudantes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a>
