--- a/AspNetCore.MVC.EFC/Views/Students/CheckStudentExistence.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Students/CheckStudentExistence.cshtml
@@ -1,14 +1,13 @@
 ﻿@model AspNetCore.MVC.EFC.Models.Student
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "CheckStudentExistence";
 }
 
-<h1>Delete</h1>
+<h1>Detalhes</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
+    <h4>Estudante</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -18,10 +17,10 @@
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstMidName)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstMidName)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.EnrollmentDate)
@@ -30,10 +29,8 @@
             @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="EditStudent" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="ListStudents">Voltar</a>
 </div>
