--- a/AspNetCore.MVC.EFC/Views/Students/CreateNewStudent.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Students/CreateNewStudent.cshtml
@@ -1,42 +1,41 @@
 ﻿@model AspNetCore.MVC.EFC.Models.Student
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "CreateNewStudent";
 }
 
-<h1>Edit</h1>
+<h1>Criar</h1>
 
-<h4>Student</h4>
+<h4>Estudante</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="CreateNewStudent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Sobrenome</label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FirstMidName" class="control-label"></label>
-                <input asp-for="FirstMidName" class="form-control" />
-                <span asp-validation-for="FirstMidName" class="text-danger"></span>
+                <label asp-for="Name" class="control-label">Nome</label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EnrollmentDate" class="control-label"></label>
+                <label asp-for="EnrollmentDate" class="control-label">Matrícula</label>
                 <input asp-for="EnrollmentDate" class="form-control" />
                 <span asp-validation-for="EnrollmentDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ListStudents">Voltar</a>
 </div>
 
 @section Scripts {
