--- a/AspNetCore.MVC.EFC/Views/Students/ListStudents.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Students/ListStudents.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<AspNetCore.MVC.EFC.Models.Student>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ListStudents";
 }
 
-<h1>Index</h1>
+<h1>Lista de Estudantes</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateNewStudent">Criar Novo</a>
 </p>
 <table class="table">
     <thead>
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstMidName)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.EnrollmentDate)
@@ -31,15 +31,15 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstMidName)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.EnrollmentDate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditStudent" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="CheckStudentExistence" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="DeleteStudent" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
