--- a/AspNetCore.MVC.EFC/Views/Students/Index.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Students/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<AspNetCore.MVC.EFC.Models.Student>
 
 @{
-    ViewData["Title"] = "ListStudents";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Lista de Estudantes</h1>
+<h1>Index</h1>
 
 <p>
-    <a asp-action="CreateNewStudent">Criar Novo</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.EnrollmentDate)
             </td>
             <td>
-                <a asp-action="EditStudent" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="CheckStudentExistence" asp-route-id="@item.Id">Detalhes</a> |
-                <a asp-action="DeleteStudent" asp-route-id="@item.Id">Deletar</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
