--- a/AspNetCore.MVC.EFC/Views/Home/Index.cshtml
+++ b/AspNetCore.MVC.EFC/Views/Home/Index.cshtml
@@ -3,20 +3,20 @@
 }
 
 <div class="jumbotron">
-    <h1>Faculdade de Tecnologia</h1>
+    <h1>Technology College</h1>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Bem-vindo à Faculdade de Tecnologia</h2>
+        <h2>Welcome to the Technology College</h2>
         <p>
-            "Faculdade de Tecnologia" é um exemplo de projeto que
-            demonstra como usar o EntityFramework em um Aplicativo
-            de Web Asp.Net Core MVC.
+            "Technology College" is an example of a project that
+            demonstrates how to use EntityFramework in an Application
+            Asp.Net Core MVC Web Site.
         </p>
     </div>
     <div class="col-md-4">
-        <h2>Construa do zero</h2>
-        <p>Você pode saber mais sobre o projeto acessando o repositório no Github.</p>
-        <p><a class="btn btn-default" href="https://github.com/paulamora-is/Poc-EntityFrameworkCore">Acessar repositório &raquo;</a></p>
+        <h2>Do it Yourself</h2>
+        <p>You can find out more about the project by accessing the repository on Github.</p>
+        <p><a class="btn btn-default" href="https://github.com/paulamora-is/Poc-EntityFrameworkCore">Access repository &raquo;</a></p>
     </div>
 </div>
